Updated: code to 21 and some cleaning.